<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="30dp"
        android:text="@string/Updateex"
        android:textAlignment="center"
        android:textColor="@color/Btn"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/updatedate"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:hint="@string/Date" />

    <EditText
        android:id="@+id/updatecategory"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:hint="@string/category"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:text="@string/rs"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/updateamount"
            android:layout_width="363dp"
            android:layout_height="match_parent"
            android:hint="@string/amount" />

    </LinearLayout>

    <Button
        android:id="@+id/UPBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/Btn"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/Updateex" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/back"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
